Fix responsive nav overflow, style column modules for responsive, style current holdings pie graphs for responsive, lighten module divider lines

--- a/src/styles/global/_base.scss
+++ b/src/styles/global/_base.scss
@@ -34,8 +34,8 @@ body {
     display: block;
     max-width: 768px;
     width: 100%;
-    height: 2px;
-    background-color: $black;
+    height: 1px;
+    background-color: $grey;
   }
 
   &:last-child::after {
@@ -91,5 +91,9 @@ a {
   .wrap {
     width: 100%;
     padding: 0 2rem;
+  }
+
+  .page-content {
+    margin: 0 auto;
   }
 }
