--- a/src/styles/global/_footer.scss
+++ b/src/styles/global/_footer.scss
@@ -17,7 +17,9 @@
 }
 
 .logo-footer {
+  display: block;
   max-width: 768px;
+  margin: 0 auto;
 }
 
 .nav-footer {
@@ -151,6 +153,7 @@
 @media (max-width: 1024px) {
   #footer-nav .wrap {
     @include grid(center, center, column);
+    padding: 2em 0;
   }
 
   .nav-footer {
@@ -158,7 +161,7 @@
     margin-top: 2em;
 
     ul {
-      display: inline-block;
+      @include grid(center, center, row, wrap);
 
       li {
         display: inline-block;
