--- a/src/styles/global/_navigation.scss
+++ b/src/styles/global/_navigation.scss
@@ -51,3 +51,15 @@ body.nav-active {
     max-width: 100%;
   }
 }
+
+@media (max-height: 768px) {
+  #responsive-nav {
+    padding: 1em 2em;
+  }
+}
+
+@media (max-height: 660px) {
+  .logo-responsive {
+    display: none;
+  }
+}
