--- a/src/styles/modules/_singlecolumn.scss
+++ b/src/styles/modules/_singlecolumn.scss
@@ -1,6 +1,7 @@
 .module-single_column {
-  font-size: 1.25em;
-  max-width: 1024px;
+  font-size: 1.5em;
+  max-width: 768px;
   margin: 0 auto;
-  padding: 3em 0;
+  padding: 2em 0;
+  font-weight: $font-light;
 }
